Fix dropdown z-index problem on the top-menu module

--- a/assets/css/lsx-rtl.css
+++ b/assets/css/lsx-rtl.css
@@ -85,7 +85,7 @@ body { direction: rtl; }
 
 #top-menu .menu-item.cta > a, #top-menu .menu-item.cta > a:active, #top-menu .menu-item.cta > a:visited { font-size: 12px; line-height: 32px; padding-bottom: 0; padding-top: 0; }
 
-#top-menu .dropdown-menu { border: 0 none; border-radius: 0; box-shadow: none; right: 15px; margin: 0; padding: 0; }
+#top-menu .dropdown-menu { border: 0 none; border-radius: 0; box-shadow: none; right: 15px; margin: 0; padding: 0; z-index: 1001; }
 
 #top-menu .dropdown-menu > .menu-item { padding: 0; }
 
