--- a/assets/css/scss/layout/_top-menu.scss
+++ b/assets/css/scss/layout/_top-menu.scss
@@ -98,6 +98,7 @@
 		left: 15px;
 		margin: 0;
 		padding: 0;
+		z-index: 1001;
 
 		& > .menu-item {
 			padding: 0;
